compilation_tests/wrong_output_size.stderr
error[E0308]: mismatched types
   --> compilation_tests/wrong_output_size.rs:11:29
    |
11  |     r2c.process(&mut input, &mut output).unwrap();
    |         -------             ^^^^^^^^^^^ expected an array with a fixed size of 51 elements, found one with 50 elements
    |         |
    |         arguments to this function are incorrect
    |
    = note: expected mutable reference `&mut [Complex<f32>; 51]`
               found mutable reference `&mut [Complex<_>; 50]`
note: associated function defined here
   --> src/lib.rs
    |
    |     fn process(
    |        ^^^^^^^
